docs: document hello-mysql compose services

--- a/examples/hello-mysql/Makefile
+++ b/examples/hello-mysql/Makefile
@@ -1,11 +1,17 @@
 SHELL := /bin/sh
 
-.PHONY: run test migrate compose-up compose-down sqlc
+.PHONY: run test migrate compose-up compose-up-db compose-up-app compose-down sqlc
 
 TEST_PACKAGES ?= ./...
 
 compose-up:
-	docker compose up -d
+	docker compose up -d mysql app
+
+compose-up-db:
+	docker compose up -d mysql
+
+compose-up-app:
+	docker compose up -d app
 
 compose-down:
 	docker compose down -v
@@ -13,8 +19,7 @@ compose-down:
 migrate:
 	go run ./cmd/migrate
 
-run: compose-up migrate
-	go run ./cmd/api
+run: compose-up-db migrate compose-up-app
 
 sqlc:
 	sqlc generate
