--- a/examples/hello-mysql/docker-compose.yml
+++ b/examples/hello-mysql/docker-compose.yml
@@ -12,3 +12,29 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+  app:
+    image: golang:1.25
+    working_dir: /app
+    volumes:
+      - .:/app
+    environment:
+      HTTP_ADDR: ":8080"
+      MYSQL_DSN: "root:password@tcp(mysql:3306)/app?parseTime=true&multiStatements=true"
+    ports:
+      - "8080:8080"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    command: sh -c "go mod download && go run ./cmd/api"
+  migrate:
+    image: golang:1.25
+    working_dir: /app
+    volumes:
+      - .:/app
+    environment:
+      MYSQL_DSN: "root:password@tcp(mysql:3306)/app?parseTime=true&multiStatements=true"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    command: sh -c "go mod download && go run ./cmd/migrate"
+    profiles: ["migrate"]
