--- a/examples/hello-mysql/docker-compose.yml
+++ b/examples/hello-mysql/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       HTTP_ADDR: ":8080"
       MYSQL_DSN: "root:password@tcp(mysql:3306)/app?parseTime=true&multiStatements=true"
+      LOG_LEVEL: "debug"
     ports:
       - "8080:8080"
     depends_on:
