--- a/examples/hello-mysql/docker-compose.yml
+++ b/examples/hello-mysql/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       HTTP_ADDR: ":8080"
       MYSQL_DSN: "root:password@tcp(mysql:3306)/app?parseTime=true&multiStatements=true"
       LOG_LEVEL: "debug"
+      LOG_COLOR: "on"
     ports:
       - "8080:8080"
     depends_on:
