--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
+          go-version: "1.25.x"
           cache-dependency-path: "**/*.sum"
 
       # - name: Cache Tools and Modules
@@ -56,6 +57,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
+          go-version: "1.25.x"
           cache-dependency-path: "**/*.sum"
       - name: Test with coverage
         run: make test-coverage
