feat(cli): auto-register generators and clean up ci smoke (#214)
## Type

- [x] `feat` — New feature
- [x] `fix` — Bug fix
- [x] `refactor` — Code restructure (no behavior change)
- [x] `docs` — Documentation only
- [x] `test` — Test coverage
- [x] `chore` — Build, CI, tooling
- [ ] `perf` — Performance improvement

## Summary

This PR completes provider/controller auto-registration in the CLI and
cleans up CI smoke checks by moving inline workflow scripts into
Makefile targets. Release artifact automation changes were intentionally
removed and will be handled in a later PR.

## Changes

- Added idempotent AST insertion for providers and controllers with
typed errors and atomic write behavior.
- Integrated auto-registration into `modkit new provider` and `modkit
new controller` with explicit partial-failure remediation output.
- Propagated registration failures as non-zero errors from CLI commands
while preserving user guidance output.
- Normalized provider token component names (`-` -> `_`) to keep
generated tokens valid for module.component format.
- Expanded CLI/AST tests for insertion, duplicate prevention, malformed
module shapes, helper/error paths, and command failure paths.
- Updated README quickstart examples to avoid ambiguous `--module` usage
when already inside a module directory.
- Refactored `.github/workflows/ci.yml` `cli-smoke` job to call Makefile
targets instead of inline shell blocks.
- Added `make cli-smoke-build` and `make cli-smoke-scaffold` targets and
documented them in `CONTRIBUTING.md`.
- Updated smoke compile step to build package directory (`go build
./cmd/api`).
- Simplified Codecov upload input to `.coverage/coverage.out` (removed
missing `.coverage/coverage-examples.out`).
- Removed GoReleaser-related files/workflow changes from this PR
(`.goreleaser.yml` deletion + release workflow revert).
- Added `.sisyphus/` to `.gitignore` and removed tracked `.sisyphus`
artifacts to prevent leaking local paths/session metadata.

## Breaking Chang

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,5 +67,23 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: .coverage/coverage.out,.coverage/coverage-examples.out
+          files: .coverage/coverage.out
           fail_ci_if_error: false
+
+  cli-smoke:
+    name: CLI Smoke Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-go@v6
+        with:
+          go-version: "1.25.7"
+          cache-dependency-path: |
+            tools/tools.go
+            go.mod
+
+      - name: Build CLI
+        run: make cli-smoke-build
+
+      - name: Test CLI scaffolding
+        run: make cli-smoke-scaffold
