--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,15 @@ jobs:
           fetch-depth: 0
           token: ${{ steps.app-token.outputs.token }}
 
+      - name: SHA drift guard
+        run: |
+          EXPECTED_SHA="${{ github.event.workflow_run.head_sha }}"
+          ACTUAL_SHA=$(git rev-parse HEAD)
+          if [ "$EXPECTED_SHA" != "$ACTUAL_SHA" ]; then
+            echo "SHA drift detected: main is at $ACTUAL_SHA, but CI ran on $EXPECTED_SHA"
+            exit 1
+          fi
+
       - name: Run semantic-release
         id: semrel
         uses: go-semantic-release/action@v1
@@ -58,9 +67,19 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Create GitHub App Token
+        id: app-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ vars.RELEASE_APP_ID }}
+          private-key: ${{ secrets.RELEASE_APP_PRIVATE_KEY }}
+          owner: go-modkit
+          repositories: modkit
+
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Checkout released tag
         run: |
@@ -83,4 +102,4 @@ jobs:
           version: "~> v2"
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
