chore(examples): run containers as non-root
Ultraworked with Sisyphus

https://github.com/code-yeongyu/oh-my-opencode

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/examples/hello-simple/Dockerfile
+++ b/examples/hello-simple/Dockerfile
@@ -6,4 +6,11 @@ COPY . /repo
 
 RUN go mod download
 
+RUN useradd -m -u 10001 appuser \
+  && chown -R appuser:appuser /repo /go
+
+ENV GOCACHE=/tmp/go-cache
+
+USER appuser
+
 CMD ["go", "run", "main.go"]
