--- a/examples/hello-mysql/Dockerfile
+++ b/examples/hello-mysql/Dockerfile
@@ -6,4 +6,11 @@ COPY . /repo
 
 RUN go mod download
 
+RUN useradd -m -u 10001 appuser \
+  && chown -R appuser:appuser /repo /go
+
+ENV GOCACHE=/tmp/go-cache
+
+USER appuser
+
 CMD ["sh", "-c", "go run ./cmd/migrate && go run ./cmd/seed && go run ./cmd/api"]
