--- a/examples/hello-sqlite/Dockerfile
+++ b/examples/hello-sqlite/Dockerfile
@@ -10,4 +10,11 @@ RUN apt-get update \
 
 RUN go mod download
 
+RUN useradd -m -u 10001 appuser \
+  && chown -R appuser:appuser /repo /go
+
+ENV GOCACHE=/tmp/go-cache
+
+USER appuser
+
 CMD ["go", "run", "./cmd/api"]
