chore(lint): enable gosec with v2 config
Ultraworked with Sisyphus

https://github.com/code-yeongyu/oh-my-opencode

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,7 @@ linters:
     - staticcheck
     - govet
     - unused
+    - gosec
     - bodyclose
     - nilerr
     
@@ -36,6 +37,13 @@ formatters:
       local-prefixes: github.com/go-modkit/modkit
 
 linters-settings:
+  gosec:
+    excludes:
+      - G101
+      - G302
+      - G304
+      - G306
+      - G114
   govet:
     enable:
       - nilness
@@ -66,7 +74,7 @@ issues:
 
   exclude-rules:
     # Relax rules for tests
-    - path: ".*_test\\.go$"
+    - path: '.*_test\.go$'
       linters:
         - errcheck
         - dupl
